--- a/reference-implementations/AppGW-IAPIM-Func/bicep/config.yml
+++ b/reference-implementations/AppGW-IAPIM-Func/bicep/config.yml
@@ -3,6 +3,6 @@ RESOURCE_NAME_PREFIX: 'apimdemo'
 ENVIRONMENT_TAG: 'dev'
 DEPLOYMENT_NAME: 'ase-demo-deployment'
 VM_USERNAME: 'agent'
-ACCOUNT_NAME: 'repalce me in repo secrets'
+ACCOUNT_NAME: 'craigspaterson'
 CICD_AGENT_TYPE: 'azuredevops'
 CERT_TYPE: 'selfsigned'
