set agent type to none

--- a/reference-implementations/AppGW-IAPIM-Func/bicep/config.yml
+++ b/reference-implementations/AppGW-IAPIM-Func/bicep/config.yml
@@ -4,5 +4,5 @@ ENVIRONMENT_TAG: 'prd'
 DEPLOYMENT_NAME: 'ase-demo-deployment'
 VM_USERNAME: 'agent'
 ACCOUNT_NAME: 'craigspaterson'
-CICD_AGENT_TYPE: 'azuredevops'
+CICD_AGENT_TYPE: 'none'
 CERT_TYPE: 'selfsigned'
